// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Section should render 1`] = `
<header
  className="sc-bZQynM hKjmOG"
>
  <div
    className="sc-gzVnrw hGWTJJ"
  >
    title
  </div>
</header>
`;

exports[`Section should render content 1`] = `
<header
  className="sc-bZQynM hKjmOG"
>
  <div
    className="sc-gzVnrw hGWTJJ"
  >
    title
  </div>
  content
</header>
`;
